completed basic functionality

--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
       </div>
     </div>
     <div class="row text-center">
-    <div class="col-12">
-      <h3>Output:</h3>
-      <div id="output">
-          
+      <div class="col-12">
+        <h3>Output:</h3>
       </div>
     </div>
+    <div class="row" id="output">
+    </div>
+    <div class="row text-center">
+      <div class="col-12" id="thankyou">
+
+      </div>
+    </div>
+  </div>
   </div>
   </div>
   <script src="vender-service.js"></script>
