a little tidying up

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         </div>
         <h5 id="money">Money: $
-          <span id="moneyAmt">0</span>
+          <span id="moneyAmt"></span>
         </h5>
         <button class="btn btn-primary btn-lg" onclick="app.controllers.venderController.addMoney()">Add Quarter</button>
         <button class="btn btn-primary btn-lg" onclick="app.controllers.venderController.returnChange()">Return Change</button>
